# CLI-Usage

./: .gitignore  README.md  cli_usage_core.py  cli_usage_gtk.py  cli_usage_xplat.py  pyproject.toml  requirements.txt  setup.sh  setup_macos.sh  setup_windows.ps1
tests/: test_core.py
