[project]
name = "cli-usage"
version = "0.1.0"
description = "Tray/menu-bar indicator for Claude Code, Codex CLI, and Gemini CLI usage."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Nima Ansari" }]
dependencies = [
  "Pillow==10.4.0",
  "pystray==0.19.5",
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
pythonpath = ["."]
